--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
