--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/babel__core": "^7.20.1",
+    "babel-preset-react-app": "^10.0.1",
     "react-icons": "^4.10.1"
   },
   "browserslist": {
