--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "postcss": "8.4.23",
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.3",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.1",
     "tailwindcss": "3.3.2",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/babel__core": "^7.20.1",
+    "@types/react": "^18.2.15",
     "babel-preset-react-app": "^10.0.1",
     "react-icons": "^4.10.1"
   },
