--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "concurrently \"nodemon ./dist/server.js\" \"tsc -w\""
+    "server": "concurrently \"nodemon ./dist/server.js\" \"tsc -w\"",
+    "build" : "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
   "license": "ISC",
