--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "concurrently \"nodemon ./dist/server.js\" \"tsc -w\"",
-    "build" : "npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.0",
+    "mongoose": "^7.4.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "socket.io": "^4.7.1"
@@ -32,5 +32,8 @@
     "@types/uuid": "^9.0.2",
     "re": "^0.1.4",
     "uuid": "^9.0.0"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
