--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.4.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "socket.io": "^4.7.1"
